apps/sbom-app/overlays/prod/env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbom-app
spec:
  template:
    spec:
      containers:
        - name: app
