apps/sbom-app/overlays/prod/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sbom-app
spec:
  hostnames:
    - "sbom.example.com"
